--- a/CSSstyle2.css
+++ b/CSSstyle2.css
@@ -25,10 +25,11 @@ nav {
 
 nav ul {
     text-align: left;
-    display: inline;
+    display: flex;
     margin: 0;
     padding: 1em 1em 1em 0;
     list-style: none;
+	width: 100%;
 }
 
 nav ul li {
@@ -134,4 +135,5 @@ footer {
     clear: both;
     text-shadow: 1px 1px 2px rgba(0, 0, 0, 0.3);
 }
+
 
