--- a/CSSstyle2.css
+++ b/CSSstyle2.css
@@ -20,7 +20,7 @@ body {
 nav {
     margin: 0 auto;
     margin-top: 3em;
-    width: 1400px;
+    width: flex;
 }
 
 nav ul {
@@ -135,6 +135,7 @@ footer {
     clear: both;
     text-shadow: 1px 1px 2px rgba(0, 0, 0, 0.3);
 }
+
 
 
 
