--- a/CSSstyle2.css
+++ b/CSSstyle2.css
@@ -20,7 +20,7 @@ body {
 nav {
     margin: 0 auto;
     margin-top: 3em;
-    width: flex;
+    width: 1100 px;
 }
 
 nav ul {
@@ -36,13 +36,15 @@ nav ul li {
     display: inline-block;
     margin-right: .01em;
     position: relative;
-    padding: 1em 3em;
+    padding: 1em 1.5em;
     background: #6a11cb;
     -webkit-transition: all 0.2s;
     -moz-transition: all 0.2s;
     -ms-transition: all 0.2s;
     -o-transition: all 0.2s;
     transition: all 0.2s;
+	flex: 1;
+	text-allign: center;
 }
 
 nav li a {
@@ -135,6 +137,7 @@ footer {
     clear: both;
     text-shadow: 1px 1px 2px rgba(0, 0, 0, 0.3);
 }
+
 
 
 
