--- a/Cssstyle3.css
+++ b/Cssstyle3.css
@@ -57,7 +57,7 @@
 }
 
 .heading {
-     font-family: 'Roboto', serif;
+     font-family: 'Playfair Display', serif;
      font-size: 2rem;
      font-weight: 700;
      line-height: 1.2;
@@ -65,7 +65,7 @@
 }
 
 .description {
-     font-family: 'Arial', sans-serif;
+     font-family: 'Open Sans', sans-serif;
      font-size: 1rem;
      line-height: 1.5;
 }
@@ -128,4 +128,5 @@
 .theme-purple .tag {
     background-color: rgba(217, 194, 255, 0.25);
     color: #f3e6ff;
+
 }
