--- a/Cssstyle6.css
+++ b/Cssstyle6.css
@@ -152,7 +152,7 @@ body {
   position: absolute;
   background-color: #fff;
   width: 100%;
-  height: 320px;
+  height: 200px;
   top: 0;
   left: 0;
   z-index: 2;
@@ -179,9 +179,10 @@ body {
   -webkit-border-radius: 4px;
   border-radius: 4px;
   position: absolute;
-  background-color: #fff;
+  background-color: linear-gradient(to top, #FF9314, #FF69B4, #FFC0CB);
   width: 100%;
-  height: 320px;
+  height: 200px;
   top: 0;
   left: 0;
 }
+
