--- a/Cssstyle6.css
+++ b/Cssstyle6.css
@@ -31,7 +31,7 @@ body {
   -webkit-border-radius: 4px;
   border-radius: 4px;
   margin-bottom: 30px;
-  width: 100%;
+  flex: 1;
   height: 320px;
 }
 .card-container:not(.manual-flip):hover .front {
@@ -185,4 +185,5 @@ body {
   top: 0;
   left: 0;
 }
+
 
