--- a/Cssstyle8.css
+++ b/Cssstyle8.css
@@ -22,6 +22,31 @@ body {
   transform: translate3d(0, 0, 0);
 }
 
+/* Общие стили для слоев */
+.layer {
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-repeat: repeat-x;
+  background-position: 0 100%;
+  animation-timing-function: linear;
+  animation-iteration-count: infinite;
+  animation-fill-mode: both;
+}
+
+/* Движущиеся объекты */
+.moving-object {
+  position: absolute;
+  z-index: 6;
+  background-repeat: no-repeat;
+  background-position: 0 50%;
+  animation-timing-function: linear;
+  animation-iteration-count: infinite;
+  animation-fill-mode: both;
+}
+
 /* Слой 1 - Голуби */
 .layer-1 {
   animation: animation_fg linear 30s infinite both;
@@ -128,4 +153,5 @@ animation: animation_fg linear 120s infinite both;
 	100% {
 	background-position: 2000px 100%;
 	}
+
 }
