--- a/CSSstyle2.css
+++ b/CSSstyle2.css
@@ -3,7 +3,7 @@
 }
 
 body {
-    background-color: transparent;
+    background-color: black;
     margin: 0 auto;
     font-family: 'Roboto', sans-serif;
     color: #333;
@@ -109,23 +109,18 @@ nav ul li:hover ul {
     float: left;
     width: 49%;
     height: 300px;
-    background: #f3e6ff;
+    background: #a94dff;
 }
 
 .left {
     float: left;
     width: 50%;
     height: 300px;
-    background: #e6f7e6;
-}
-
-.left:hover {
-    transform: translateY(-5px);
-    box-shadow: 0 5px 15px rgba(46, 139, 87, 0.2);
+    background: #72d472;
 }
 
 footer {
-    background: linear-gradient(135deg, #2e8b57 0%, #6a11cb 100%); /* Градиент зеленый-фиолетовый */
+    background-color: #6a11cb; 
     color: #ffffff;
     width: 1083px;
     margin: 0 auto;
@@ -136,6 +131,7 @@ footer {
     clear: both;
     text-shadow: 1px 1px 2px rgba(0, 0, 0, 0.3);
 }
+
 
 
 
