--- a/Cssstyle6.css
+++ b/Cssstyle6.css
@@ -31,7 +31,7 @@ body {
   -webkit-border-radius: 4px;
   border-radius: 4px;
   margin-bottom: 30px;
-  flex: 1;
+  width: 850px;
   height: 320px;
 }
 .card-container:not(.manual-flip):hover .front {
@@ -185,5 +185,6 @@ body {
   top: 0;
   left: 0;
 }
+
 
 
